--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script defer src="./index.js"></script>
     <title>Document</title>
 </head>
-<body class="body">
+<body>
     
 </body>
 </html>
